fix : style.css more

--- a/server/static/more/index.html
+++ b/server/static/more/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <img src="assets/hero.jpg" alt="Gambar Hero" />
+        <img src="assets/hero.jpg" alt="Gambar Hero" /><br>
         <button onclick="showMessage()">Klik Aku</button>
         <p id="message"></p>
     </main>
